@@ -13,7 +13,6 @@ import io.swagger.v3.oas.models.OpenAPI;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.molgenis.emx2.MolgenisException;
 import org.molgenis.emx2.Schema;
 import org.molgenis.emx2.Table;
@@ -29,6 +28,12 @@ public class MolgenisWebservice {
   static final String TEMPFILES_DELETE_ON_EXIT = "tempfiles-delete-on-exit";
   static final Logger logger = LoggerFactory.getLogger(MolgenisWebservice.class);
   public static final String SCHEMA = "schema";
+  private static final String ROBOTS_TXT = "robots.txt";
+  private static final String USER_AGENT_ALLOW = "User-agent: *\nAllow: /";
+  public static final String EDITOR = "Editor";
+  public static final String MANAGER = "Manager";
+  public static final String ROLE = "role";
+  public static final String VIEWER = "Viewer";
   static MolgenisSessionManager sessionManager;
   static OIDCController oidcController;
 
@@ -48,6 +53,7 @@ public class MolgenisWebservice {
         ("/" + OIDC_CALLBACK_PATH),
         (request, response) -> oidcController.handleLoginCallback(request, response));
     get(("/" + OIDC_LOGIN_PATH), oidcController::handleLoginRequest);
+    get("/" + ROBOTS_TXT, MolgenisWebservice::robotsDotTxt);
 
     // root
     get(
@@ -95,15 +101,16 @@ public class MolgenisWebservice {
         "/:schema",
         (req, res) -> {
           if (!("/" + OIDC_LOGIN_PATH).equals(req.pathInfo())
-              && !("/" + OIDC_CALLBACK_PATH).equals(req.pathInfo())) {
-            res.redirect("/" + req.params("schema") + "/");
+              && !("/" + OIDC_CALLBACK_PATH).equals(req.pathInfo())
+              && !("/" + ROBOTS_TXT).equals(req.pathInfo())) {
+            res.redirect("/" + req.params(SCHEMA) + "/");
           }
         });
     before(
         "/:schema/:app",
         (req, res) -> {
           if (!req.params("app").equals("graphql") && !req.params("app").equals("theme.css")) {
-            res.redirect("/" + req.params("schema") + "/" + req.params("app") + "/");
+            res.redirect("/" + req.params(SCHEMA) + "/" + req.params("app") + "/");
           }
         });
 
@@ -123,6 +130,11 @@ public class MolgenisWebservice {
         });
   }
 
+  private static String robotsDotTxt(Request request, Response response) {
+    response.type("text/plain;charset=UTF-8");
+    return USER_AGENT_ALLOW;
+  }
+
   private static void redirectSchemaToFirstMenuItem(Request request, Response response) {
     try {
       Schema schema = getSchema(request);
@@ -135,23 +147,22 @@ public class MolgenisWebservice {
                   el ->
                       role == null
                           || role.equals(schema.getDatabase().getAdminUserName())
-                          || el.get("role") == null
-                          || el.get("role").equals("Viewer")
-                              && List.of("Viewer", "Editor", "Manager").contains(role)
-                          || el.get("role").equals("Editor")
-                              && List.of("Editor", "Manager").contains(role)
-                          || el.get("role").equals("Manager") && role.equals("Manager"))
-              .collect(Collectors.toList());
+                          || el.get(ROLE) == null
+                          || el.get(ROLE).equals(VIEWER)
+                              && List.of(VIEWER, EDITOR, MANAGER).contains(role)
+                          || el.get(ROLE).equals(EDITOR) && List.of(EDITOR, MANAGER).contains(role)
+                          || el.get(ROLE).equals(MANAGER) && role.equals(MANAGER))
+              .toList();
 
-      if (menu.size() > 0) {
+      if (!menu.isEmpty()) {
         response.redirect(
-            "/" + request.params("schema") + "/" + menu.get(0).get("href").replace("../", ""));
+            "/" + request.params(SCHEMA) + "/" + menu.get(0).get("href").replace("../", ""));
       }
     } catch (Exception e) {
       // silly default
       logger.debug(e.getMessage());
     }
-    response.redirect("/" + request.params("schema") + "/tables");
+    response.redirect("/" + request.params(SCHEMA) + "/tables");
   }
 
   public static void stop() {
